--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -18,7 +18,6 @@
             android:id="@+id/mainTextViewStatus"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginBottom="5dp"
             android:gravity="center"
@@ -29,23 +28,51 @@
             android:id="@id/android:list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/linearLayout1"
+            android:layout_above="@+id/linearLayout2"
             android:layout_below="@+id/mainTextViewStatus"
             android:background="#E0E0E0"
             android:drawSelectorOnTop="true" />
 
-        <!-- 当ListView中没有数据时，id为@id/android:empty的view就会显示出来 -->
-
-        <TextView
+        <!-- <TextView
             android:id="@id/android:empty"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/linearLayout1"
-            android:layout_below="@+id/mainTextViewStatus"
+            android:layout_above="@+id/linearLayout2"
             android:background="#E0E0E0"
             android:gravity="center"
             android:text="请点击搜索设备"
-            android:textColor="#0000FF" />
+            android:textColor="#0000FF" /> -->
+
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/linearLayout1"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="15dp"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="输入密码" />
+
+            <EditText
+                android:id="@+id/mainEditTextPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="6"
+                android:maxLength="4"
+                android:inputType="numberPassword" >
+            </EditText>
+
+            <CheckBox
+                android:id="@+id/checkBoxRememberPasword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="记住密码" />
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/linearLayout1"
@@ -53,14 +80,6 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:orientation="horizontal" >
-
-            <Button
-                android:id="@+id/mainBtnConnect"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="连接"
-                android:visibility="gone" />
 
             <Button
                 android:id="@+id/mainBtnStop"
@@ -76,6 +95,7 @@
                 android:layout_weight="1"
                 android:text="关门" />
         </LinearLayout>
+
     </RelativeLayout>
 
     <Button
