--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginBottom="5dp"
             android:gravity="center"
-            android:text="请选择并连接设备"
+            android:text="请选择设备"
             android:textSize="18sp" />
 
         <ListView
