--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -5,5 +5,10 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/main_menu_changepassword"/>
+    <item
+        android:id="@+id/action_devicename"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/main_menu_devicename"/>
 
 </menu>
