--- a/res/layout/activity_change_password.xml
+++ b/res/layout/activity_change_password.xml
@@ -8,7 +8,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context=".ChangePasswordActivity" >
-	
+	<TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="请先保持按住设备上的设置按键，然后点击修改密码"
+        android:gravity="center"
+        android:textColor="#ff0099cc"
+        android:padding="10dp"
+	    />
     
     <EditText android:id="@+id/edit_old_password" 
         android:layout_width="match_parent"
