--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -80,6 +80,103 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:orientation="horizontal" >
+			<LinearLayout 
+				android:layout_width="0dp"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="1"
+	            android:gravity="center_horizontal"
+	            android:orientation="vertical"
+                >
+            <EditText android:id="@+id/mainTimeMultiple"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:gravity="center_horizontal"
+	            android:inputType="number"
+	            android:text="0"
+                android:hint="倍数"
+                />
+            <TextView 
+                android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:textSize="12sp"
+	            android:text="倍数"
+                ></TextView>
+            </LinearLayout>
+            <LinearLayout 
+				android:layout_width="0dp"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="1"
+	            android:gravity="center_horizontal"
+	            android:orientation="vertical"
+                >
+            <EditText android:id="@+id/mainTimeDelay"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:gravity="center_horizontal"
+	            android:inputType="number"
+	            android:text="0"
+                android:hint="延时"
+                />
+            <TextView 
+                android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:textSize="12sp"
+	            android:text="延时"
+                ></TextView>
+            </LinearLayout>
+            <LinearLayout 
+				android:layout_width="0dp"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="1"
+	            android:gravity="center_horizontal"
+	            android:orientation="vertical"
+                >
+            <EditText android:id="@+id/mainTimeOpen"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:gravity="center_horizontal"
+	            android:inputType="number"
+	            android:text="0"
+                android:hint="持续"
+                />
+            <TextView 
+                android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:textSize="12sp"
+	            android:text="持续"
+                ></TextView>
+            </LinearLayout>
+            <LinearLayout 
+				android:layout_width="0dp"
+	            android:layout_height="wrap_content"
+	            android:layout_weight="1"
+	            android:gravity="center_horizontal"
+	            android:orientation="vertical"
+                >
+            <EditText android:id="@+id/mainPortNumber"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:gravity="center_horizontal"
+	            android:inputType="number"
+	            android:text="1"
+                android:hint="端口"
+                />
+            <TextView 
+                android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:textSize="12sp"
+	            android:text="端口"
+                ></TextView>
+            </LinearLayout>
+        </LinearLayout>
+
+    </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
 
             <Button
                 android:id="@+id/mainBtnStop"
@@ -95,14 +192,11 @@
                 android:layout_weight="1"
                 android:text="关门" />
         </LinearLayout>
-
-    </RelativeLayout>
-
     <Button
         android:id="@+id/mainBtnOpen"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="0.5"
         android:text="开门" />
 
 </LinearLayout>
